fix responsiveness, add scroll bar
Add scroll bar to table element to prevent overflowing. Limit the width of the scroll element based on current window size.

--- a/kylling-ris/src/features/food-log/food-log-table.module.css
+++ b/kylling-ris/src/features/food-log/food-log-table.module.css
@@ -13,6 +13,12 @@
   color: white;
 }
 
+.header {
+  background-color: #ffffff;
+  font-size: 1.5rem;
+  padding: 16px 0 16px 16px;
+}
+
 .deleteIcon {
   margin-top: 3px;
 }
